--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Set up Docker Buildx
         # Вызов сборщика контейнеров docker
         uses: docker/setup-buildx-action@v1 
-      - name: Login to Docker 
+      - name: krasd
         # Запуск скрипта авторизации на Docker Hub
         uses: docker/login-action@v1 
         with:
